# ChangeLog for sys-fs/ntfs3g
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.168 2015/02/27 11:14:31 ago Exp $

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ntfs3g-2014.2.15.ebuild:
  Stable for sparc, wrt bug #533270

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ntfs3g-2014.2.15.ebuild:
  Stable for alpha, wrt bug #533270

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ntfs3g-2014.2.15.ebuild:
  Stable for ppc64, wrt bug #533270

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ntfs3g-2014.2.15.ebuild:
  Stable for ppc, wrt bug #533270

  10 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ntfs3g-2014.2.15.ebuild:
  Stable for x86, wrt bug #533270

  01 Feb 2015; Markus Meier <maekke@gentoo.org> ntfs3g-2014.2.15.ebuild:
  arm stable, bug #533270

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> ntfs3g-2014.2.15.ebuild:
  Stable for amd64, wrt bug #533270

  30 Jan 2015; Patrick McLean <chutzpah@gentoo.org>
  files/ntfs3g-2014.2.15-dont-put-things-in-root.patch:
  Update "dont-put-things-in-root" patch to build properly with USE=-ntfsprogs
  (bug #538230).

*ntfs3g-2014.2.15-r1 (29 Jan 2015)

  29 Jan 2015; Patrick McLean <chutzpah@gentoo.org>
  +ntfs3g-2014.2.15-r1.ebuild,
  +files/ntfs3g-2014.2.15-dont-put-things-in-root.patch,
  +files/ntfs3g-2014.2.15-fix-fstrim-applied-to-partitons.patch,
  +files/ntfs3g-2014.2.15-implement-fstrim.patch,
  +files/ntfs3g-2014.2.15-update-fuse-lite-to-support-ioctls.patch:
  Revision bump, add upstream patches to support fstrim. Make sure everything
  is in /usr/{s,}bin rather than making some symlinks in /{s,}bin. Set LD to
  make sure to use the bfd linker, even when the system linker is set to gold
  (bug #450024)

  13 Apr 2014; Mike Frysinger <vapier@gentoo.org>
  +files/ntfs3g-2014.2.15-no-split-usr.patch, ntfs3g-2014.2.15.ebuild:
  Disable split /usr check in build as it breaks when cross-compiling for diff